
syntax = "proto3";

package common;

message GamePacket {
  oneof payload {
    C2S_PlayerMoveRequest playerMoveRequest = 1;
    S2C_PlayerMoveNotification playerMoveNotification = 2;
    C2S_GhostMoveRequest ghostMoveRequest = 3;
    S2C_GhostMoveNotification ghostMoveNotification = 4;
    S2C_PingRequest pingRequest = 5;
    C2S_PingResponse pingResponse = 6;
    C2S_PlayerStateChangeRequest playerStateChangeRequest = 7;
    S2C_PlayerStateChangeNotification playerStateChangeNotification = 8;
    C2S_GhostStateChangeRequest ghostStateChangeRequest = 9;
    S2C_GhostStateChangeNotification ghostStateChangeNotification = 10;
    C2S_ItemChangeRequest itemChangeRequest = 11;
    S2C_ItemChangeNotification itemChangeNotification = 12;
    C2S_LoginRequest loginRequest = 16;
    S2C_LoginResponse loginResponse = 17;
    C2S_CreateRoomRequest createRoomRequest = 18;
    S2C_CreateRoomResponse createRoomResponse = 19;
    C2S_JoinRoomRequest joinRoomRequest = 20;
    S2C_JoinRoomResponse joinRoomResponse = 21;
    S2C_JoinRoomNotification joinRoomNotification = 22;
    C2S_StartStageRequest startStageRequest = 23;
    S2C_SpawnInitialDataRequest spawnInitialDataRequest = 24;
    C2S_SpawnInitialDataResponse spawnInitialDataResponse = 25;
    S2C_StartStageNotification startStageNotification = 26;
    C2S_PlayerAttackedRequest playerAttackedRequest = 27;
    S2C_PlayerLifeResponse playerLifeResponse = 28;
    C2S_GhostAttackedRequest ghostAttackedRequest = 29;
    C2S_ItemGetRequest itemGetRequest = 30;
    S2C_ItemGetResponse itemGetResponse = 31;
    C2S_ItemUseRequest itemUseRequest = 32;
    S2C_ItemUseResponse itemUseResponse = 33;
    S2C_ItemUseNotification itemUseNotification = 34;
    C2S_ItemDiscardRequest itemDiscardRequest = 35;
    S2C_ItemDiscardResponse itemDiscardResponse = 36;
    S2C_ItemDiscardNotification itemDiscardNotification = 37;
    C2S_DoorToggleRequest doorToggleRequest = 38;
    S2C_DoorToggleNotification doorToggleNotification = 39;
    S2C_StageEndNotification stageEndNotification = 40;
    C2S_ExtractSoulRequest extractSoulRequest = 41;
    S2C_ExtractSoulNotification extractSoulNotification = 42;
    S2C_DisconnectPlayerNotification disconnectPlayerNotification = 43;

    C2S_EnterLobbyRequest enterLobbyRequest = 501;
    S2C_EnterLobbyResponse enterLobbyResponse = 502;
    C2S_UpdateSettingRequest updateSettingRequest = 503;
    S2C_UpdateSettingResponse updateSettingResponse = 504;
    C2S_EnterListOfRoomRequest enterListOfRoomRequest = 505;
    S2C_EnterListOfRoomResponse enterListOfRoomResponse = 506;
    C2S_RefreshListOfRoomRequest refreshListOfRoomRequest = 507;
    S2C_RefreshListOfRoomResponse refreshListOfRoomResponse = 508;
    C2S_FilterRoomByHostUserRequest filterRoomByHostUserRequest = 509;
    S2C_FilterRoomByHostUserResponse filterRoomByHostUserResponse = 510;
    C2S_SearchRoomRequest searchRoomRequest = 511;
    S2C_SearchRoomResponse searchRoomResponse = 512;
    C2S_CreateWaitingRoomRequest createWaitingRoomRequest = 513;
    S2C_CreateWaitingRoomResponse createWaitingRoomResponse = 514;
    S2C_CreateWaitingRoomNotification createWaitingRoomNotification = 515;
    C2S_JoinWaitingRoomRequest joinWaitingRoomRequest = 516;
    S2C_JoinWaitingRoomResponse joinWaitingRoomResponse = 517;
  }
}


message ServicePacket {
  oneof payload {
    ConnectServiceRequest connectServiceRequest = 1;
    ConnectedServiceNotification connectedServiceNotification = 2;
    DisconnectServiceRequest disconnectServiceRequest = 3;
    DisconnectedServiceNotification disconnectedServiceNotification = 4;
    JoinSessionRequest joinSessionRequest = 5;
    JoinSessionResponse joinSessionResponse = 6;
    ExitSessionRequest exitSessionRequest = 7;
    ExitSessionResponse exitSessionResponse = 8;
  }
}